--- a/chat-space/src/styles/variable.scss
+++ b/chat-space/src/styles/variable.scss
@@ -27,3 +27,5 @@ $primary-light-11 : #02a1cfad;
 
 $primary-light-10-shade : #54bbd9;
 $primary-light-11-shade : #02a1cf;
+
+$white-grey : #e1e1e1
